Index/index.css
@keyframes slideIn {
    0% {
        opacity: 0;
        transform:scale(2);
        border-width: 100px;
    }
    100% {
        opacity: 1;
        transform: scale(1);
        border-width: 10px;
    }
}
@keyframes headerSlide {
    0% {
        opacity: 0;
        transform: translateY(-100%);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}
body {
    background-image: url(../Index/Image/background-image.jpg);
    overflow-x: hidden;
    font-family: sans-serif;
    text-align: center;
    width: 100%;
        margin: 0;
        width: 100vw;
        height: 100vh;
}
.button {
    transform: translateX(2700%);
    border: 3px dotted black;
}
.WebsiteHeader {
    background-color: grey;
    height: 64px;
    flex-direction: row;
}
.MenuButton {
    position: absolute;
    left: -0.5%;
    top: 3%;
    transform: translateY(-10%);
    margin-left: 15px;
    margin-right: 15px;
    height: 30px;
    width: 30px;
    border: 2px solid black;
}
.MenuButton:hover {
    background-color: lightslategray;
}
#MenuOverlay {
    position: fixed;
    display: none;
    width: 12%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: white;
    z-index: 2;
    border-radius: 10px;
    margin-left: -8px;
    flex-direction: column;
    align-items: center;
  }
.CloseOverlay {
    margin-top: 10px;
    margin-left: 180px;
}
.CloseOverlay:hover {
    cursor: pointer;
}
.button-container {
    display: flex;
    flex-direction: column;
    align-items: center; 
}
.button-container > a > button {
    margin: 10px 0; 
}
#MenuOverlay > a > button, #MenuOverlay > button {
    margin: 10px 0;  
    padding: 10px 10px;
    border: none;       
    background-color: #f2f2f2; 
    cursor: pointer;     
    transition: background-color 0.3s; 
}

.title {
    font-family: "Lexend Deca", "Helvetica Neue", Helvetica, Arial, sans-serif;
    display: grid;
    place-items: center;
    flex-grow: 1;
    color: #000; 
    font-size: 32px; 
    text-align: center;
    
}
.WebsiteHeader {
    display: flex;      
    align-items: center; 
    justify-content: space-between;  
    background-color: grey;
    height: 64px;
}
.image-button {
    background: url('../Index/Image/placeholder.jpg') no-repeat center center;
    background-size: cover;  
    border: none;  
    width: 200px;
    height: 200px;
    cursor: pointer; 
    outline: none;  
    transition: transform 0.3s;  
    background-repeat: no-repeat; 
    background-position: center;
    font-size: large;
    color: white;
}
.daniel {
    background-image: url('../Index/Image/daniel.JPG');
}
.santiago {
    background-image: url('../Index/Image/santiago.jpeg');
}

.ishaan {
    background-image: url('../Index/Image/ishaan.png');
}

.rajdeep {
    background-image: url('../Index/Image/rajdeep.jpeg');
}

.akash {
    background-image: url('../Index/Image/akash.jpeg');
}
.lucas {
    background-image: url('../Index/Image/lucas.png');
}
.image-button:hover {
    transform: scale(1.1);  
}
.flex-container {
    display: flex;
    justify-content: center; 
    flex-wrap: wrap; 
    gap: 30px; 
    margin-top: 10%;
}
.textContent p {
    color: #ffffff;  
    font-size: large;
}
h1 a {
    color: #be21b1;  
}

